--- a/example/package.json
+++ b/example/package.json
@@ -1,11 +1,12 @@
 {
   "scripts": {
-    "dev": "tsx watch src/index.tsx"
+    "dev": "tsx watch src/index.tsx",
+    "build": "vite build"
   },
   "dependencies": {
-    "@hono/node-server": "^1.3.5",
-    "hono": "^3.12.5",
-    "@magitools/forem-wrapper": "../"
+    "@hono/node-server": "^1.4.0",
+    "@magitools/forem-wrapper": "^0.0.1",
+    "hono": "^3.12.5"
   },
   "devDependencies": {
     "tsx": "^3.12.2"
